--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
@@ -2,10 +2,11 @@
   <div class="add-emoji-container-own">
     <div
       class="inner-add-emoji-container"
-      (mouseover)="showEmojiContainer(2)"
-      (mouseout)="hideEmojiContainer()"
+      (mouseover)="showEmojiContainer(message.messageId)"
+      (mouseout)="scheduleHideEmojiContainer(message.messageId)"
       [ngClass]="{
-        'inner-add-emoji-container-show': isEmojiContainerVisible === 2
+        'inner-add-emoji-container-show':
+          emojiContainerVisible[message.messageId] && isDataLoaded
       }"
     >
       <div>
@@ -22,7 +23,12 @@
           (emojiClick)="addReaction(message.messageId, $event.emoji)"
         ></ngx-emoji>
       </div>
-      <div [matMenuTriggerFor]="emojiMenu">
+      <div
+        [matMenuTriggerFor]="emojiMenu"
+        (menuOpened)="onMenuOpened(message.messageId)"
+        (menuClosed)="onMenuClosed(message.messageId)"
+        (click)="toggleBorder('emoji')"
+      >
         <mat-icon class="material-symbols-outlined">add_reaction</mat-icon>
       </div>
       <div
@@ -33,27 +39,19 @@
         <mat-icon class="material-symbols-outlined">comment</mat-icon>
       </div>
       <div
-        (click)="
-          threadService.setActualMessage(message);
-          setEditMessageMenuOpened(true);
-          showEmojiContainer(2)
-        "
         mat-button
         [matMenuTriggerFor]="editMessageMenu"
-        #chooseChannelMenuTrigger="matMenuTrigger"
-        (click)="toggleBorder('editMessage')"
+        (menuOpened)="onMenuOpened(message.messageId)"
+        (menuClosed)="onMenuClosed(message.messageId)"
       >
         <mat-icon>more_vert</mat-icon>
-        <mat-menu
-          #editMessageMenu="matMenu"
-          xPosition="after"
-          (closed)="setEditMessageMenuOpened(false); hideEmojiContainer()"
-        >
+        <mat-menu #editMessageMenu="matMenu">
           <span
             class="edit-message-text"
             (click)="messageService.setEditMessageId(message.id)"
-            >Nachricht bearbeiten</span
           >
+            Nachricht bearbeiten
+          </span>
         </mat-menu>
       </div>
     </div>
@@ -61,14 +59,15 @@
 
   <div
     class="message-container-own"
-    (mouseover)="showEmojiContainer(2)"
-    (mouseout)="hideEmojiContainer()"
+    (mouseover)="showEmojiContainer(message.messageId)"
+    (mouseout)="hideEmojiContainer(message.messageId)"
     [ngClass]="{
-      'message-container-hover': isEmojiContainerVisible === 2
+      'message-container-hover':
+        emojiContainerVisible[message.messageId] && isDataLoaded
     }"
   >
     <img
-      src="{{ message.photoURL }}"
+      src="{{ photoURL }}"
       alt="Profile Picture"
       (click)="userService.openProfileInfo(message.userId)"
     />
@@ -82,7 +81,15 @@
     ></app-own-message-edit>
   </div>
 
-  <mat-menu xPosition="after" #emojiMenu>
-    <app-emoji-picker [message]="message" [component]="'channel'"></app-emoji-picker>
+  <mat-menu
+    xPosition="after"
+    #emojiMenu
+    (menuOpened)="showEmojiContainer(message.messageId)"
+    (menuClosed)="hideEmojiContainer(message.messageId)"
+  >
+    <app-emoji-picker
+      [message]="message"
+      [component]="'channel'"
+    ></app-emoji-picker>
   </mat-menu>
 </section>
