--- a/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.html
+++ b/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.html
@@ -1,20 +1,49 @@
 <section>
   <div class="textarea-container">
-    <textarea 
-      placeholder="Antworten..." 
+    <textarea
+      placeholder="Antworten..."
       [(ngModel)]="newMessageContent"
-      (keydown.enter)="sendMessage(); $event.preventDefault();" 
+      (keydown.enter)="sendMessage(); $event.preventDefault()"
     ></textarea>
     <div class="icons-container">
       <div class="left-icons">
-        <mat-icon class="material-symbols-outlined">add</mat-icon>
+        <mat-icon
+          class="material-symbols-outlined"
+          [matMenuTriggerFor]="uploadMethodMenu"
+          (click)="toggleBorder('upload')"
+          >add</mat-icon
+        >
         <div class="grey-line"></div>
-        <mat-icon class="material-symbols-outlined" [matMenuTriggerFor]="emojiMenu">sentiment_satisfied</mat-icon>
-        <mat-icon class="material-symbols-outlined">alternate_email</mat-icon>
+        <mat-icon
+          class="material-symbols-outlined"
+          [matMenuTriggerFor]="emojiMenu"
+          (click)="toggleBorder('emoji')"
+          >sentiment_satisfied</mat-icon
+        >
+        <mat-icon
+          class="material-symbols-outlined"
+          [matMenuTriggerFor]="mentionMenu"
+          (click)="toggleBorder('mention')"
+          >alternate_email</mat-icon
+        >
       </div>
-      <mat-icon (click)="sendMessage()" class="send-icon">send</mat-icon>
+      <mat-icon
+        (click)="sendMessage()"
+        [ngClass]="{
+          'send-icon':
+            newMessageContent.trim() !== '' || attachmentUrls.length > 0
+        }"
+        >send</mat-icon
+      >
     </div>
   </div>
+
+  <mat-menu xPosition="after" #uploadMethodMenu yPosition="above">
+    <app-upload-method-selector
+      (uploadSelected)="addDownloadLink($event); openAttachmentSidenav()" [messageId]="message?.messageId"
+    ></app-upload-method-selector>
+  </mat-menu>
+
   <mat-menu xPosition="after" #emojiMenu>
     <emoji-mart
       title="Pick your emoji…"
@@ -29,8 +58,20 @@
         categories: { search: 'Suchergebnisse', recent: 'Neueste' }
       }"
     ></emoji-mart>
-</mat-menu>
-</section>
+  </mat-menu>
 
-  
-  
+  <mat-menu xPosition="after" #mentionMenu yPosition="above">
+    <app-mention-user (mentionUser)="insertMention($event)"></app-mention-user>
+  </mat-menu>
+
+  <mat-sidenav-container class="example-container">
+    <mat-sidenav #threadAttachmentSidenav mode="side" position="end"
+      ><app-attachment-preview
+        [actualAttachmentUrls]="attachmentUrls"
+        [messageId]="message?.messageId"
+        (attachmentRemoved)="onAttachmentRemoved($event)"
+      ></app-attachment-preview>
+    </mat-sidenav>
+    <mat-sidenav-content></mat-sidenav-content>
+  </mat-sidenav-container>
+</section>
