--- a/src/app/main/private-chat/private-chat.component.scss
+++ b/src/app/main/private-chat/private-chat.component.scss
@@ -16,11 +16,11 @@ app-private-chat-header {
   display: flex;
 }
 
-app-private-chat-history {
-  display: flex;
-  flex-grow: 1;
-  overflow: hidden;
-}
+// app-private-chat-history {
+//   display: flex;
+//   flex-grow: 1;
+//   overflow: hidden;
+// }
 
 app-private-chat-placeholder {
   display: flex;
