--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -40,7 +40,7 @@
         routerLinkActive="active"
         (click)="
           activeButtonService.setActiveButton('');
-          channelService.setChannel(channel.channelId)
+          channelService.setChannel(channel.channelId);
         "
       >
         <mat-icon class="material-symbols-outlined">tag</mat-icon
