--- a/src/app/shared/components/attachment-preview/attachment-preview.component.scss
+++ b/src/app/shared/components/attachment-preview/attachment-preview.component.scss
@@ -5,6 +5,7 @@ section {
   width: 100%;
   height: 100%;
 }
+
 .image {
   position: relative;
   width: 100% !important;
@@ -38,12 +39,18 @@ section {
 
 .close-icon {
   position: absolute;
-  color: var(--text-color);
-  top: 5px;
-  right: 5px;
+  top: 10px;
+  right: 10px;
   display: none !important;
+  padding: 3px;
+  border-radius: 100px;
+  background-color: var(--bg-color);
 
   &:hover {
     cursor: pointer;
+  }
+
+  mat-icon {
+    color: var(--purple1-color);
   }
 }
