Style changes and badges

--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -42,6 +42,8 @@
           activeButtonService.setActiveButton('');
           channelService.setChannel(channel.channelId);
         "
+        matBadge="1"
+        matBadgeSize="small"
       >
         <mat-icon class="material-symbols-outlined">tag</mat-icon
         >{{ channel.channelName }}
