--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -40,10 +40,8 @@
         routerLinkActive="active"
         (click)="
           activeButtonService.setActiveButton('');
-          channelService.setChannel(channel.channelId);
+          channelService.setChannel(channel.channelId)
         "
-        matBadge="1"
-        matBadgeSize="small"
       >
         <mat-icon class="material-symbols-outlined">tag</mat-icon
         >{{ channel.channelName }}
