Added the add reaction functions to the thread. Users can now add emojis as reactions to the thread.

--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
@@ -3,7 +3,7 @@
     <span
       class="name"
       (click)="userService.openProfileInfo(message?.userId)"
-      >{{ displayName }}</span
+      >{{ displayName || "Lädt..." }}</span
     >
     <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
   </div>
