--- a/src/app/main/new-message-placeholder/new-message-placeholder-new-message/new-message-placeholder-new-message.component.scss
+++ b/src/app/main/new-message-placeholder/new-message-placeholder-new-message/new-message-placeholder-new-message.component.scss
@@ -48,6 +48,11 @@ textarea[disabled] {
   &:hover {
     cursor: not-allowed;
   }
+
+  > mat-icon {
+    height: 40px;
+    width: 40px;
+  }
 }
 
 .grey-line {
