--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
@@ -109,6 +109,9 @@ textarea {
 
 .send-icon {
   color: var(--purple1-color);
+  height: 40px;
+  width: 40px;
+
   &:hover {
     cursor: pointer;
     color: var(--purple2-color);
