Added a click function to close the matautocomplete at the add-users-to-channel-component.

--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
@@ -1,4 +1,4 @@
-<section (click)="$event.stopPropagation()">
+<section (click)="$event.stopPropagation(); closeAutocomplete()">
   <div class="headline">
     <h2>Leute hinzufügen</h2>
     <mat-icon (click)="header.closeMenu('add-member')">close</mat-icon>
@@ -10,10 +10,11 @@
     <span>{{ currentChannel?.channelName }}</span>
   </div>
   <div class="dialog-wrapper">
-    <mat-dialog-content>
+    <mat-dialog-content (click)="$event.stopPropagation()">
       <app-add-users-to-channel
         [channelId]="channelId"
         (usersEmpty)="handleUsersEmpty($event)"
+        [closeAutocompleteEmitter]="closeAutocompleteEmitter"
       ></app-add-users-to-channel>
     </mat-dialog-content>
     <mat-dialog-actions [align]="'end'">
