Changed the hover-effect on the button at add-member.

--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
@@ -22,6 +22,7 @@
         <button
           [disabled]="invalid"
           class="button-primary"
+          [ngClass]="{ 'button-disabled': invalid, 'button-enabled': !invalid }"
           mat-button
           mat-dialog-close
           (click)="create()"
