--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
@@ -287,3 +287,11 @@ h2 {
   display: flex;
   justify-content: flex-end;
 }
+
+.button-disabled {
+  cursor: not-allowed !important;
+}
+
+.button-enabled:hover {
+  cursor: pointer;
+}
