delete guest account by logout and integrate img upload by account registration

--- a/src/app/landing-page/register/select-avatar/select-avatar.component.html
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component.html
@@ -65,9 +65,16 @@
       </div>
       <div class="upload-avatar">
         <p>Eigenes Bild verwenden</p>
-        <button mat-flat-button class="button-secondary">
+        <input
+          type="file"
+          id="file-upload"
+          accept="image/*"
+          (change)="onFileSelected($event)"
+          hidden
+        />
+        <label for="file-upload" mat-flat-button class="button-secondary">
           Datei hochladen
-        </button>
+        </label>
       </div>
     </div>
 
