Added some functions to make it for the users possible to delete own messages in thread.

--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.html
@@ -20,6 +20,7 @@
     <button
       mat-button
       [matMenuTriggerFor]="leaveChannelMenu"
+      (click)="toggleBorder('leave-channel')"
       class="button-primary"
     >
       <span>Channel verlassen</span>
