--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
@@ -1,7 +1,7 @@
 ::ng-deep {
   .mat-mdc-menu-panel {
     max-width: none !important;
-    border-radius: 0px 30px 30px 30px;
+    border-radius: var(--border-radius) !important;
   }
 }
 
