--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-template.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-template.component.scss
@@ -1,6 +1,7 @@
 ::ng-deep {
   .mat-mdc-menu-panel {
     max-width: none !important;
+    border-radius: var(--border-radius) !important;
   }
 }
 
